otras formas de estructurar objetos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 
 
-	<script type="text/javascript" src="output/parametrosDefecto.js"></script>
+	<script type="text/javascript" src="output/acortarObjetos.js"></script>
 </body>
 </html>
