--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 
 
-	<script type="text/javascript" src="bundle.js"></script>
+	<script type="text/javascript" src="src/destructurarArreglos.js"></script>
 </body>
 </html>
